objects/openCTIconfig__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>openCTIconfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <label>ContactName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>openCTIconfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>popContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>popContact</label>
        <type>Checkbox</type>
    </fields>
    <label>Lightning CTI Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>openCTIconfig Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lightning CTI Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>